--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ figcaption {
     border-radius: 20px;
 }
 body {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
     padding: 60px;
     background-color: #589aa2;
 }
