--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,9 @@ b {
 #tribute-link {
     color: #589aa2;
 }
+* {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+}
